...
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: Text(widget.isEditing ? 'Editar Tarefa' : 'Nova Tarefa'),
      ),
      body: Stack(
        children: [
          SafeArea(
            child: TaskForm(existing: widget.existing, onSubmit: _onSubmit),
          ),
...
