...
          Center(
            child: Text('Tarefas Geo',
                style: theme.textTheme.headlineSmall
                    ?.copyWith(fontWeight: FontWeight.bold)),
          ),
          const Center(
            child: Text('Tarefas com localização e clima',
                style: TextStyle(fontFamily: 'OpenSans')),
          ),
          const SizedBox(height: 24),
          const _Section(title: 'Aluno', body: 'Guilherme Queiroz Ribeiro'),
          const _Section(
            title: 'Disciplina',
...
