...

              // ── Ações ───────────────────────────────────────────────────
              Row(
                mainAxisAlignment: MainAxisAlignment.end,
                children: <Widget>[
                  AdaptativeButton(
                    widget.isEditing ? 'Salvar alterações' : 'Criar Tarefa',
                    _submitForm,
                  ),
                ],
              ),
            ],
          ),
...
